<resources>
    <string name="app_name">Birthday Remainder</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="upcoming_birthdays">Upcoming birthday profiles</string>
    <string name="calendar">Calendar</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_details">SettingsActivity</string>


    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_add_new">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="enter_name">Enter Name</string>
    <string name="add">ADD PROFILE</string>
    <string name="dob">DOB(dd/mm/yyyy)</string>
    <string name="mins_or_hours_or_days_or_weeks">mins or hours or days or weeks</string>
    <string name="notify_me_on">Notify me on</string>
    <string name="gender">Gender :</string>
    <string name="filter">Filter</string>
    <string name="birthday">Birthday</string>
    <string name="name">By Name</string>
    <string name="age_l_h">By Age(Low-High)</string>
    <string name="age_h_l">By Age(High-Low)</string>
    <string name="by_birthday">By Birthday</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string-array name="time_array">
        <item>Select</item>
        <item>Minutes</item>
        <item>Hours</item>
        <item>Days</item>
        <item>Weeks</item>
    </string-array>
    <string-array name="gender">
        <item>Select</item>
        <item>Male</item>
        <item>Female</item>
        <item>Prefer not to say</item>
    </string-array>

</resources>