<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/action_filter"
        android:orderInCategory="100"
        android:title="@string/birthday"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_sort_bday"
                android:orderInCategory="100"
                android:title="@string/by_birthday"
                app:showAsAction="never"/>
            <item
                android:id="@+id/action_sort_age"
                android:orderInCategory="100"
                android:title="@string/age_l_h"
                app:showAsAction="never"/>
            <item
                android:id="@+id/action_sort_age_desc"
                android:orderInCategory="100"
                android:title="@string/age_h_l"
                app:showAsAction="never"/>
            <item
                android:id="@+id/action_sort_name"
                android:orderInCategory="100"
                android:title="@string/name"
                app:showAsAction="never"/>

        </menu>
    </item>
    <item
        android:icon="@drawable/ic_baseline_settings_24"
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="Settings"
        app:showAsAction="ifRoom"/>

</menu>