<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlAdd"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNewActivity"
    android:layout_gravity="center_vertical"
    android:background="@color/colorPrimary"
    android:fillViewport="true"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rlRegister"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <ImageView
            android:id="@+id/imgAlarm"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:src="@drawable/ic_baseline_add_alarm_24" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgAlarm"
            android:layout_marginLeft="12dip"
            android:layout_marginTop="25dip"
            android:layout_marginRight="12dip"
            android:background="@drawable/_edit_text"
            android:drawableStart="@drawable/ic_baseline_account_circle_24"
            android:drawablePadding="3dp"
            android:hint="@string/enter_name"
            android:imeOptions="actionDone"
            android:inputType="textCapWords"
            android:padding="10dip"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etDob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etName"
            android:layout_marginLeft="12dip"
            android:layout_marginTop="6dip"
            android:layout_marginRight="12dip"
            android:background="@drawable/_edit_text"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="true"
            android:drawableStart="@drawable/ic_calendar"
            android:drawablePadding="3dp"
            android:ems="10"
            android:hint="@string/dob"
            android:inputType="date"
            android:maxLines="1"
            android:padding="10dip"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <RelativeLayout
            android:id="@+id/rlGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etDob"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="12dip"
            android:layout_marginTop="6dip"
            android:layout_marginRight="12dip">

            <TextView
                android:id="@+id/txtGender"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="4dp"
                android:padding="6dp"
                android:text="@string/gender"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spGender"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="6dip"
                android:layout_toRightOf="@id/txtGender"
                android:background="@drawable/_edit_text"
                android:entries="@array/gender"
                android:textAlignment="center" />
        </RelativeLayout>

        <TextView
            android:id="@+id/txtNotify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rlGender"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:paddingHorizontal="10dp"
            android:paddingVertical="6dp"
            android:text="@string/notify_me_before"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etNotify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtNotify"
            android:layout_marginStart="60dip"
            android:layout_marginTop="10dip"
            android:layout_marginEnd="60dp"
            android:background="@drawable/_edit_text"
            android:drawablePadding="3dp"
            android:hint="@string/mins_or_hours_or_days_or_weeks"
            android:inputType="number"
            android:maxLines="1"
            android:padding="10dip"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spTime"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/etNotify"
            android:layout_marginStart="60dip"
            android:layout_marginTop="6dip"
            android:layout_marginEnd="60dp"
            android:autofillHints="select"
            android:background="@drawable/_edit_text"
            android:entries="@array/time_array"
            android:textAlignment="center" />


    </RelativeLayout>

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="12dip"
            android:layout_marginBottom="30dip"
            android:layout_marginRight="12dip"
            android:background="@drawable/add_rounded_bg"
            android:text="@string/add"
            android:textAllCaps="false"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textStyle="bold" />


</RelativeLayout>